syntax = "proto3";

service FileService {
    rpc FindFile (FileName) returns (FilesFound);
}

message FileName {
    string name = 1;
}

message FilesFound {
    repeated string found = 1;
}